SVY-20398 Servoy cloud login shouldn't block the developer when there is something going wrong.
made ServoyLoginDialog.getLoginToken/doLogin async (with a callback)
So that the actual logging in and the token check will be done in a http
client async call. This http client is also rewritten to use the build
in java http client (from apache commons)